Adding DB Connection Practice, Login, Registration Webpages

--- a/WebsitePages/Index.html
+++ b/WebsitePages/Index.html
@@ -42,7 +42,8 @@
                     <button class="btn btn-outline-secondary" type="submit">Search</button>
                 </form>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-                    <button class="btn btn-secondary me-md-2" type="button">Logout</button>
+                    <a href="Login.html" class="btn btn-secondary me-md-2">Logout</a>
+                    <!-- <button class="btn btn-secondary me-md-2" type="button">Logout</button>-->
                 </div>
                 </div>
         </div>
